Add -y to sway installation
Signed-off-by: Petr Horacek <phoracek@redhat.com>

--- a/play.yml
+++ b/play.yml
@@ -87,7 +87,7 @@
     when: workstation
     block:
     - name: Install Sway module
-      command: dnf module install sway/full
+      command: dnf module install -y sway/full
       become: true
     - name: Fix Sway by adding sticky bit to its binary
       file:
