Configure git to only FF on pull
Signed-off-by: Petr Horacek <phoracek@redhat.com>

--- a/play.yml
+++ b/play.yml
@@ -24,6 +24,7 @@
       with_items:
         - { name: "user.name",  value: "{{ full_name }}" }
         - { name: "user.email", value: "{{ email }}" }
+        - { name: "pull.ff", value: "only" }
 # -- Zsh -----------------------------------------------------------------------
   - name: Zsh
     block:
