Run emacs in server mode
Signed-off-by: Petr Horacek <phoracek@redhat.com>

--- a/play.yml
+++ b/play.yml
@@ -143,6 +143,11 @@
         name: emacs
         state: present
       become: true
+    - name: Enable Emacs as a daemon
+      systemd:
+        state: started
+        enabled: true
+        scope: user
     - name: Fetch Doom Emacs repo
       git:
         repo: https://github.com/hlissner/doom-emacs.git
