Use Iosevka fonts in Emacs
Signed-off-by: Petr Horacek <phoracek@redhat.com>

--- a/play.yml
+++ b/play.yml
@@ -181,6 +181,14 @@
         name: cmake
         state: present
       become: true
+    - name: Install Iosevka SS05 fonts
+      block:
+      - name: Download Iosevka fonts into system fonts directory
+        src: https://github.com/be5invis/Iosevka/releases/download/v3.6.3/pkg-iosevka-ss05-3.6.3.zip
+        dest: /usr/share/fonts
+        remote_src: yes
+      - name: Refresh system fonts
+        shell: fc-cache
 # -- Pcmanfm -------------------------------------------------------------------
 # -- Utils ---------------------------------------------------------------------
 # pavucontrol-qt
