--- a/play.yml
+++ b/play.yml
@@ -252,7 +252,17 @@
       - name: Refresh system fonts
         shell: fc-cache
 # -- Pcmanfm -------------------------------------------------------------------
-# -- Utils ---------------------------------------------------------------------
+# -- Workstation utils ---------------------------------------------------------
+  - name: Workstation utils
+    when: workstation
+    block:
+    - name: Allow sound control, input and output
+      dnf:
+        name:
+          - pulseaudio
+          - pavucontrol-qt
+        state: present
+      become: true
 # pavucontrol-qt
 # filezilla
 # keepassx
