--- a/sway/config
+++ b/sway/config
@@ -37,6 +37,12 @@ exec swayidle -w \
               resume 'swaymsg "output * dpms on"' \
          before-sleep 'swaylock -f -c 000000'
 
+### Polkit configuration
+#
+# This enables polkit daemon, allowing GUI apps to switch users.
+# It requires lxpolkit to be installed
+exec lxpolkit
+
 ### Input configuration
 #
 # Example configuration:
