Document configuration of emacs
Signed-off-by: Petr Horacek <hrck@protonmail.com>

--- a/i3/config
+++ b/i3/config
@@ -32,6 +32,12 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
+# start a browser
+bindsym $mod+i exec firefox
+
+# start Emacs
+bindsym $mod+m exec emacsclient -c
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
