Add a shortcut for a file manager
Signed-off-by: Petr Horacek <hrck@protonmail.com>

--- a/i3/config
+++ b/i3/config
@@ -38,6 +38,9 @@ bindsym $mod+i exec firefox
 # start Emacs
 bindsym $mod+m exec emacsclient -c
 
+# start a file manager
+bindsym $mod+p exec thunar
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
