--- a/i3/config
+++ b/i3/config
@@ -30,6 +30,10 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86MonBrightnessUp exec backlight up
 bindsym XF86MonBrightnessDown exec backlight down
 
+# Keybord layout
+exec "setxkbmap -layout us,cz"
+exec "setxkbmap -option 'grp:alt_shift_toggle'"
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
