--- a/i3/config
+++ b/i3/config
@@ -198,7 +198,7 @@ bindsym $mod+r mode "resize"
 
 # Per-application config:
 for_window [class="URxvt"] border pixel 2
-for_window [class="Firefox"] border pixel 0
+for_window [class="firefox"] border pixel 0
 for_window [class="Emacs"] border pixel 0
 for_window [class="vlc"] border pixel 0
 
