--- a/i3/config
+++ b/i3/config
@@ -38,7 +38,7 @@ exec "setxkbmap -option 'grp:alt_shift_toggle'"
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # start a browser
 bindsym $mod+i exec firefox
@@ -197,7 +197,7 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Per-application config:
-for_window [class="URxvt"] border pixel 2
+for_window [class="Alacritty"] border pixel 2
 for_window [class="firefox"] border pixel 0
 for_window [class="Emacs"] border pixel 0
 for_window [class="vlc"] border pixel 0
