--- a/i3/config
+++ b/i3/config
@@ -31,8 +31,7 @@ bindsym XF86MonBrightnessUp exec backlight up
 bindsym XF86MonBrightnessDown exec backlight down
 
 # Keybord layout
-exec "setxkbmap -layout us,cz"
-exec "setxkbmap -option 'grp:alt_shift_toggle'"
+exec_always --no-startup-id "setxkbmap -layout us,cz -option 'grp:alt_shift_toggle'"
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
