Customize helix theme with inlays
Signed-off-by: Petr Horacek <hrck@protonmail.com>

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -8,3 +8,9 @@ idle-timeout = 100
 insert = "bar"
 normal = "block"
 select = "block"
+
+[editor.soft-wrap]
+enable = true
+
+[editor.lsp]
+display-inlay-hints = true
