--- a/i3/config
+++ b/i3/config
@@ -204,6 +204,7 @@ bindsym $mod+r mode "resize"
 # Per-application config, use `xprop` to find the class:
 for_window [class="Alacritty"] border pixel 2
 for_window [class="firefox"] border pixel 0
+for_window [class="Logseq"] border pixel 0
 for_window [class="Emacs"] border pixel 0
 for_window [class="vlc"] border pixel 0
 for_window [class="todoist"] border pixel 0
