Update after installation of F40
Signed-off-by: Petr Horacek <petr@zlosynth.com>

--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,6 +1,6 @@
-[[language]]
-name = "rust"
-config = { procMacro = { enable = true } }
+[language-server.rust-analyzer.config]                                                  
+diagnostics.disabled = ["inactive-code"]
+procMacro = { enable = true }
 
 [[language]]
 name = "latex"
