Fix argocd application path
Signed-off-by: Petr Horacek <petr@zlosynth.com>

--- a/lab/argocd/cdi-application.yaml
+++ b/lab/argocd/cdi-application.yaml
@@ -11,7 +11,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: argocd/cdi/overlays/lab
+    path: lab/argocd/cdi/overlays/lab
     repoURL: https://github.com/phoracek/noplacelikehome.git
     targetRevision: HEAD
   ignoreDifferences:
