Ignore out-of-sync CA bundle on metallb
Signed-off-by: Petr Horacek <petr@zlosynth.com>

--- a/lab/argocd/metallb-application.yaml
+++ b/lab/argocd/metallb-application.yaml
@@ -17,3 +17,10 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
+  ignoreDifferences:
+  - group: apiextensions.k8s.io
+    kind: CustomResourceDefinition
+    name: bgppeers.metallb.io
+    jsonPointers:
+    # Can't make it sync without this
+    - /spec/conversion/webhook/clientConfig/caBundle
