--- a/lab/argocd/metallb/overlays/lab/config.yaml
+++ b/lab/argocd/metallb/overlays/lab/config.yaml
@@ -4,6 +4,8 @@ kind: IPAddressPool
 metadata:
   name: pool
   namespace: metallb-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   addresses:
   - 192.168.1.2-192.168.1.9
@@ -13,3 +15,5 @@ kind: L2Advertisement
 metadata:
   name: config
   namespace: metallb-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
