--- a/lab/argocd/kubevirt-application.yaml
+++ b/lab/argocd/kubevirt-application.yaml
@@ -19,4 +19,4 @@ spec:
     kind: KubeVirt
     jsonPointers:
     # KubeVirt updates this spec
-    - /spec/configuration
+    - /spec/configuration/developerConfiguration
