--- a/lab/ansible/install_k3s.yml
+++ b/lab/ansible/install_k3s.yml
@@ -12,7 +12,7 @@
         permanent: true
         immediate: true
         state: enabled
-# firewall-cmd --permanent --add-port=6443/tcp #apiserver
+        # TODO: Do these too, otherwise can't console remotely
 # firewall-cmd --permanent --zone=trusted --add-source=10.42.0.0/16 #pods
 # firewall-cmd --permanent --zone=trusted --add-source=10.43.0.0/16 #services
 # firewall-cmd --reload
