--- a/lab/argocd/kubevirt/overlays/lab/expose-zigbee-dongle.yaml
+++ b/lab/argocd/kubevirt/overlays/lab/expose-zigbee-dongle.yaml
@@ -1,3 +1,8 @@
+apiVersion: kubevirt.io/v1
+kind: KubeVirt
+metadata:
+  name: kubevirt
+  namespace: kubevirt
 spec:
   configuration:
     developerConfiguration: 
