Use G for memory request to make argo happy
Signed-off-by: Petr Horacek <petr@zlosynth.com>

--- a/lab/argocd/homeassistant/base/virtualmachine.yaml
+++ b/lab/argocd/homeassistant/base/virtualmachine.yaml
@@ -26,7 +26,7 @@ spec:
               secureBoot: false
         resources:
           requests:
-            memory: 2000M
+            memory: 2G
       volumes:
       - name: disk1
         dataVolume:
