--- a/lab/argocd/homeassistant/overlays/lab/kustomization.yaml
+++ b/lab/argocd/homeassistant/overlays/lab/kustomization.yaml
@@ -2,5 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
+- network.yaml
+- connect-to-iot-network.yaml
 patches:
 - path: set-static-ip.yaml
+- path: connect-to-iot-network.yaml
