--- a/helix/config.toml
+++ b/helix/config.toml
@@ -3,6 +3,8 @@ theme = "onedark"
 [editor]
 line-number = "relative"
 idle-timeout = 100
+# Minimum severity to show a diagnostic after the end of a line:
+end-of-line-diagnostics = "hint"
 
 [editor.cursor-shape]
 insert = "bar"
@@ -11,3 +13,13 @@ select = "block"
 
 [editor.soft-wrap]
 enable = true
+
+[editor.inline-diagnostics]
+# Minimum severity to show a diagnostic on the primary cursor's line.
+# Note that `cursor-line` diagnostics are hidden in insert mode.
+cursor-line = "error"
+# Minimum severity to show a diagnostic on other lines:
+# other-lines = "error"
+
+[keys.normal]
+space.t = ":insert-output date +\"%B %d, %Y\""
