Fix helix date macro
Signed-off-by: Petr Horacek <phoracek@redhat.com>

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -22,4 +22,4 @@ cursor-line = "error"
 # other-lines = "error"
 
 [keys.normal]
-space.t = ":insert-output date +\"%B %d, %Y\""
+space.t = ":insert-output date +\"%%B %%d, %%Y\""
